# cpp-linear-regression-model

./: .gitignore  CMakeLists.txt  README.md  download_sample_csv.sh
include/: Column.hpp  LinearRegression.hpp  LoadData.hpp  Logger.hpp  TeeStreamBuffer.hpp
source/: CMakeLists.txt  LinearRegression.cpp  LoadData.cpp  main.cpp
